--- a/client/mRoute.html
+++ b/client/mRoute.html
@@ -28,6 +28,7 @@
 	<form>
 		<input type="text" id="origin" placeholder="Origin">
 		<input type="text" id="destination" placeholder="Destination">
+		<input type="submit" value="Go!">
 	</form>
 </template>
 
