Fix CSS add default instruction message

--- a/client/templates.html
+++ b/client/templates.html
@@ -10,7 +10,7 @@
 <template name="routesTemplate">
 	<div class="filedRoute">
 		{{#each filedRoutes}}
-			<li>{{route}}</li>
+			 {{>route}}
 		{{/each}}
 	</div>
 </template>
