Server won't add existing routes. Updates DB if not present.

--- a/client/templates.html
+++ b/client/templates.html
@@ -17,6 +17,6 @@
 
 <template name="route">
 	<div class="route">
-		<li>{{route}}</li>
+		<li>Route: {{route.route}}, Filed Altitude Max: {{route.filedAltitude_max}}, Filed Altitude Min: {{route.filedAltitude_min}}</li>
 	</div>
 </template>
