--- a/client/layout.html
+++ b/client/layout.html
@@ -1,11 +1,15 @@
 <template name="layout">
-	<div class="container-fluid">
-	    <div class="row-fluid">	
-	        <div class="page-header">
-	          <div class="hero-unit">
+	<div class="container">
+	        <div class="header">
+			        <ul class="nav nav-pills pull-right">
+			          <li class="active"><a href="#">Home</a></li>
+			          <li><a href="#">About</a></li>
+			          <li><a href="#">Contact</a></li>
+			        </ul>
+	          <div class="jumbotron">
 	              <h1>Quick Route</h1>
 	          </div>
-	          <div>
+	          <div class="container">
 	          	{{>airportForm}}
 	          </div>
 	        </div>
