--- a/client/templates.html
+++ b/client/templates.html
@@ -1,25 +1,56 @@
 <template name="airportForm">
 	<form class="form-inline" role="form">
 		<div class="form-group airportForm">
-			<label>Origin</label>
-			<input class="form-control" type="text" placeholder="Origin">
-			<label>Destination</label>
+			<label class="sr-only">Origin</label>
+			<input class="form-control" id="origin" type="text" placeholder="Origin">
+			<label class='sr-only'>Destination</label>
 			<input class="form-control" type="text" id="destination" placeholder="Destination">
 					<button type="submit" class="btn btn-primary btn-lg btn-block">Submit</button>
 		</div>
 	</form>
+</template>
 
 
 <template name="routesTemplate">
 	<div class="filedRoute">
+		<table class="table table-striped table-hover route">
+			<thead>
+				<tr>
+					<th>Routes</th>
+				</tr>
+			</thead>
+			<tbody>
 		{{#each filedRoutes}}
 			 {{>route}}
 		{{/each}}
+	</body>
+	</table>
 	</div>
 </template>
 
 <template name="route">
-	<div class="route">
-		<li>Route: {{route.route}}, Filed Altitude Max: {{route.filedAltitude_max}}, Filed Altitude Min: {{route.filedAltitude_min}}</li>
+			<tr>
+			<td>Route: {{route.route}}<br>
+				Filed Altitude Max: {{route.filedAltitude_max}}<br> 
+				Filed Altitude Min: {{route.filedAltitude_min}}</td>
+			<tr>
+</template>
+
+<template name="aboutPage">
+	<div>
+		<p>This is the about page.</p>	
 	</div>
+</template>
+
+<template name="homeTemplate">
+	<div class="jumbotron">
+	  <h1>Quick Route</h1>
+	    <p>Find, copy and paste commonly filed IFR routing</p>
+	</div>
+	  <div class="container">
+	    {{>airportForm}}
+	  </div>
+	  <div class="container">
+	  	{{>routesTemplate}}
+	  </div>
 </template>
