Fix copy-paste alert

--- a/client/templates.html
+++ b/client/templates.html
@@ -30,9 +30,9 @@
 
 <template name="route">
 			<tr>
-			<td>Route: {{route.route}}<br>
-				Filed Altitude Max: {{route.filedAltitude_max}}<br> 
-				Filed Altitude Min: {{route.filedAltitude_min}}</td>
+			<td id="routing">Route: {{route.route}}</td>
+			<td>Filed Altitude Max: {{route.filedAltitude_max}}</td> 
+			<td>Filed Altitude Min: {{route.filedAltitude_min}}</td>
 			<tr>
 </template>
 
