Add form submit error and footer

--- a/client/layout.html
+++ b/client/layout.html
@@ -14,4 +14,7 @@
 	<div>
 		{{yield}}
 	</div>
+	<footer>
+		<p>Created by <a href="jasonandrewhoffman@gmail.com">Jason Hoffman</a></p>
+	</footer>
 </template>
