Styling change. No text select on click yet

--- a/client/templates.html
+++ b/client/templates.html
@@ -31,7 +31,7 @@
 </template>
 
 <template name="route">
-	<tr>
+	<tr id="routeRow">
 		<td id="routing">{{route.route}}</td>
 		<td>{{route.filedAltitude_max}}</td> 
 		<td>{{route.filedAltitude_min}}</td>
