Change handlebar tags for 0.8.0. Reinstall iron-router

--- a/client/layout.html
+++ b/client/layout.html
@@ -1,8 +1,7 @@
 <template name="layout">
-	{{>overlay}}
 	{{>navBar}}
 	<div>
-		{{yield}}
+		{{>yield}}
 	</div>
 	<footer>
 		<p>Created by <a href="jasonandrewhoffman@gmail.com">Jason Hoffman</a></p>
