Blaze branch of ui-dropdown

--- a/client/templates.html
+++ b/client/templates.html
@@ -69,7 +69,9 @@
 	    <ul class="navbar nav">
 	      <li><a href="{{pathFor 'homeTemplate'}}">Home</a></li>
 	      <li><a href="{{pathFor 'aboutPage'}}">About</a></li>
-	      <li>{{> loginButtons}}</li>
+	    </ul>
+	    <ul class="nav navbar-nav navbar-right">
+	    {{>_loginButtons}}
 	    </ul>
 	</div>
 	</div>
