--- a/client/templates.html
+++ b/client/templates.html
@@ -241,7 +241,7 @@
 </div>
 
 </fieldset>
-<p style="text-align:center">Click <a href="#" id="registerLink">here</a> to register.</p>
+<p style="text-align:center">Don't have an account? Click <a href="#" id="registerLink">here</a> to register.</p>
 </form>
 </template>
 
