Save button in flightPlanForm saves profile information.

--- a/client/templates.html
+++ b/client/templates.html
@@ -138,7 +138,7 @@
     </div>
     <div class="row">
       <div class="col-md-2">
-        <label>Destionation</label>
+        <label>Destination</label>
         <input type="text" name="destination" class="form-control input-sm" placeholder="Destination">
       </div>
       <div class="col-md-2">
@@ -147,7 +147,7 @@
       </div>
       <div class="col-md-4">
         <label>Remarks</label>
-        <input type="text" name="remarks" class="form-control input-sm" placeholder="Remarks">
+        <input type="text" id="remarks" name="remarks" class="form-control input-sm" placeholder="Remarks">
       </div>
       <div class="col-md-2">
         <label>Fuel Onboard</label>
@@ -161,9 +161,9 @@
     <div class="row" id="address">
       <div class="col-md-4">
       <label>Pilot Name, Address and Phone</label>
-      <input type="text" name="name" class="form-control input-sm" placeholder="Name">
-        <input type="text" name="address" class="form-control input-sm" placeholder="Address">
-        <input type="text" name="phone" class="form-control input-sm" placeholder="Phone Number">
+      <input type="text" id="pilotName" class="form-control input-sm" placeholder="Name">
+        <input type="text" id="pilotAddress" name="address" class="form-control input-sm" placeholder="Address">
+        <input type="text" id="pilotPhone" name="phone" class="form-control input-sm" placeholder="Phone Number">
       </div>
       <div class="col-md-4">
         <label>Aircraft Home Base</label>
