Change 'My Account' to 'My Flight'. Link to flight plan form

--- a/client/layout.html
+++ b/client/layout.html
@@ -6,6 +6,6 @@
 		{{>yield}}
 	</div>
 	<footer>
-		<p>Created by <a href="jasonandrewhoffman@gmail.com">Jason Hoffman</a></p>
+		<p>Created by <a href="email:jasonandrewhoffman@gmail.com">Jason Hoffman</a></p>
 	</footer>
 </template>
